--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc53df01",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# # one-time setup\n",
@@ -40,7 +44,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d9d58d46",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "!pip uninstall numpy torch flash-attn transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
@@ -52,6 +60,9 @@
    "execution_count": null,
    "id": "10c60232-c71f-42a4-b876-bae76231a1b2",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -105,7 +116,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fab83e6f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -124,7 +139,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ff745242",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# in terminal pip install hf_transfer\n",
@@ -136,6 +155,72 @@
     "# !huggingface-cli download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors\n",
     "\n",
     "!huggingface-cli download black-forest-labs/FLUX.1-dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a8c9f83-d5f4-4861-ab17-899e2c67e0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate the base\n",
+    "\n",
+    "import torch\n",
+    "from diffusers import FluxPipeline\n",
+    "\n",
+    "if \"pipe\" not in globals():\n",
+    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
+    "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
+    "    pipe.set_adapters([\"boreal\"], [0.7])\n",
+    "    pipe.fuse_lora()\n",
+    "base_prompt = \"photo of a young nude woman on solid plain gray background. The woman facing the camera directly\"\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1440, width=1024, num_inference_steps=50,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(0)).images[0]\n",
+    "img.show()\n",
+    "img.save(f'prebase.webp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d739688-c609-456c-b980-482d3385a2fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # # remove bg from the base\n",
+    "\n",
+    "# %cd /workspace/dtback/models/img/\n",
+    "# !pip install gdown  -q\n",
+    "# import gdown\n",
+    "# gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
+    "# %cd /workspace/dtback/\n",
+    "\n",
+    "import torch\n",
+    "from torchvision.transforms.functional import to_tensor, to_pil_image\n",
+    "from PIL import Image\n",
+    "\n",
+    "device = torch.device('cuda')\n",
+    "precision = torch.float32\n",
+    "\n",
+    "model = torch.jit.load('/workspace/dtback/models/img/torchscript_resnet50_fp32.pth')\n",
+    "model.backbone_scale = 0.2\n",
+    "model.refine_mode = 'thresholding'\n",
+    "model.refine_threshold = 0.0001\n",
+    "model = model.to(device).eval()\n",
+    "\n",
+    "src = Image.open('prebase.webp').convert('RGB')\n",
+    "bgr = Image.new(\"RGB\", src.size, (170, 170, 170)) \n",
+    "\n",
+    "src_tensor = to_tensor(src).unsqueeze(0).to(device, dtype=precision)\n",
+    "bgr_tensor = to_tensor(bgr).unsqueeze(0).to(device, dtype=precision)\n",
+    "\n",
+    "pha, fgr = model(src_tensor, bgr_tensor)[:2]\n",
+    "\n",
+    "rgba = torch.cat([fgr, pha], dim=1)\n",
+    "result_img = to_pil_image(rgba.squeeze(0).clamp(0, 1), mode='RGBA')\n",
+    "result_img.show()\n",
+    "result_img.save('base.png')"
    ]
   },
   {
@@ -155,15 +240,16 @@
     "pip install --upgrade -r requirements.txt\n",
     "mkdir dataset\n",
     "cd dataset\n",
+    "cp /workspace/dtback/base.png ./base.png\n",
     "# curl -O https://i.ibb.co/dwccwKCZ/watson.png # 1024\n",
-    "curl -O https://i.ibb.co/35PNsSrg/watson-512.png # 512\n",
+    "# curl -O https://i.ibb.co/35PNsSrg/watson-512.png # 512\n",
     "cd ..\n",
     "mkdir loras\n",
     "\n",
     "\n",
     "cat > dataset_1024.toml << EOF\n",
     "[[datasets]]\n",
-    "resolution = 512\n",
+    "resolution = 1024\n",
     "batch_size = 4\n",
     "keep_tokens = 1\n",
     "\n",
@@ -172,7 +258,7 @@
     "  class_tokens = 'woman'\n",
     "  num_repeats = 30\n",
     "  flip_aug = true\n",
-    "  face_crop_aug_range=[1.0, 1.5]\n",
+    "  face_crop_aug_range=[1.0, 3.0]\n",
     "EOF\n",
     "\n",
     "\n",
@@ -201,22 +287,8 @@
     "cd /workspace/dtback\n",
     "\n",
     "pip install bitsandbytes torchvision\n",
-    "pip install --force-reinstall -v \"triton==3.1.0\"\n",
-    "pip install --upgrade transformers diffusers huggingface_hub peft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aa39594-e24f-4594-a9b0-cc6bf2687614",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install bitsandbytes torchvision\n",
-    "!pip install --upgrade transformers diffusers huggingface_hub peft\n",
-    "!pip install --force-reinstall -v \"triton==3.1.0\""
+    "pip install --upgrade transformers diffusers huggingface_hub peft\n",
+    "pip install --force-reinstall -v \"triton==3.1.0\""
    ]
   },
   {
@@ -256,9 +328,9 @@
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
     "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.7])\n",
+    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.8])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"fullbody candid photo of a nude woman showering\"\n",
+    "base_prompt = \"selfie photo of a woman standing on top of an icy mountain\"\n",
     "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
     "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
     "img.show()"
@@ -332,60 +404,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6bf1a3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate the base\n",
-    "# %cd /workspace/dtback/models/img/loras/ # sameface lora is not neede with boreal\n",
-    "# !curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
-    "# %cd /workspace/dtback/\n",
-    "\n",
-    "import torch\n",
-    "from diffusers import FluxPipeline\n",
-    "\n",
-    "if \"pipe\" not in globals():\n",
-    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
-    "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\"], [0.7])\n",
-    "    pipe.fuse_lora()\n",
-    "base_prompt = \"medium shot photo of a young MTFSK72GFD8 woman with pink hair wearing underwear on an evenly colored green background\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(10001)).images[0]\n",
-    "img.show()\n",
-    "img.save(f'out.webp')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6d81dbe-a9c7-4d14-aa28-f29f5bdae58b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install \"rembg[gpu,cli]\" onnxruntime\n",
-    "!rembg i out.webp output.png \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "094e2833-b6c3-4b0b-ac09-f1845c23f348",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/PeterL1n/BackgroundMattingV2.git\n",
-    "%cd BackgroundMattingV2\n",
-    "!pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7b6337fd",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# generate the rest\n",
@@ -416,7 +440,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "603d5b4b-4783-4b97-9fbc-479d84c58a4e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# !rm -rf ~/.cache/huggingface\n",
@@ -428,6 +456,9 @@
    "execution_count": null,
    "id": "45981784-8d79-4c1b-84a7-f775d9592144",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -450,7 +481,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9796bb06-5295-4f66-8985-3c500d509c82",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Setting up LLama.cpp\n",
@@ -471,7 +506,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "710b8f60-22bf-404d-ac4d-1c4f80eb5f2c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# testing llama.cpp tools\n",
@@ -493,7 +532,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9969fd70-e374-481d-95a2-4823d8f82caa",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# short test generation\n",
@@ -513,7 +556,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f6dd0576-21b2-4a93-9233-fa668ddeb01e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\" server start command\n",
@@ -533,7 +580,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "949be372-3c4d-42d8-86a8-90dd6714095e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# installing docker\n",
@@ -555,6 +606,9 @@
    "execution_count": null,
    "id": "256762fa-ab1a-4b69-9370-5c7d239e4de3",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -575,6 +629,9 @@
    "execution_count": null,
    "id": "8b4702c0-4a91-4d98-936d-d16d9fa1e5cf",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -588,6 +645,9 @@
    "execution_count": null,
    "id": "f4859244-214b-464d-a9ef-4a28f4950659",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -674,6 +734,9 @@
    "execution_count": null,
    "id": "e4736607-938d-4144-89e5-4fddb5bd7e8b",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -699,7 +762,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9b2413d-7ee2-423e-9360-5528b4f8bb77",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# txt2img\n",
@@ -738,6 +805,9 @@
    "execution_count": null,
    "id": "38d53145-b6ea-45f6-9744-063c8986b2ea",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -775,7 +845,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
