--- a/main.ipynb
+++ b/main.ipynb
@@ -160,11 +160,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "63a9d4b5-62ac-40ba-82e7-1c57aaf789c5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "curl -s https://raw.githubusercontent.com/sivel/speedtest-cli/master/speedtest.py | python3 -\n",
+    "export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "pip install numpy torch\n",
+    "pip install flash-attn --no-build-isolation\n",
+    "pip install transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
+    "                pymongo json5 diffusers protobuf peft hf_transfer supabase bitsandbytes torchvision --upgrade\n",
+    "pip install xformers \"xfuser[diffusers,flash-attn]\"\n",
+    "pip install --force-reinstall -v \"triton==3.1.0\"\n",
+    "pip install bitsandbytes torchvision\n",
+    "pip install --upgrade transformers diffusers huggingface_hub peft\n",
+    "pip install --force-reinstall -v \"triton==3.1.0\"\n",
+    "\n",
+    "k=$(echo \"aGZfaHZqck9VTXFvTXF3dW9HR3JoTlZKSWlsZUtFTlNQbXRjTw==\" | base64 --decode)\n",
+    "# Log in to Hugging Face (this assumes Python and huggingface_hub are installed)\n",
+    "python3 -c \"from huggingface_hub import login; login(token='$k', add_to_git_credential=True)\"\n",
+    "export HUGGINGFACEHUB_API_TOKEN=\"$k\"\n",
+    "export HF_TOKEN=\"$k\"\n",
+    "export HF_HUB_ENABLE_HF_TRANSFER=1\n",
+    "\n",
+    "\n",
+    "huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors\n",
+    "huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors\n",
+    "huggingface-cli download black-forest-labs/FLUX.1-dev\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0a8c9f83-d5f4-4861-ab17-899e2c67e0c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate the base\n",
+    "# # # generate the base\n",
+    "\n",
+    "# %cd /workspace/dtback/models/img/loras/\n",
+    "# !curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
+    "# %cd /workspace/dtback/\n",
     "\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
@@ -172,13 +212,20 @@
     "if \"pipe\" not in globals():\n",
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\"], [0.7])\n",
+    "    pipe.load_lora_weights(\"/workspace/dtback/models/img/loras\", weight_name=\"SameFace_Fix.safetensors\", adapter_name=\"sameface\")\n",
+    "    pipe.set_adapters([\"boreal\", \"sameface\"], [0.7, -0.3])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"photo of a young nude woman on solid plain gray background. The woman facing the camera directly\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1440, width=1024, num_inference_steps=50,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(0)).images[0]\n",
+    "base_prompt = \"\"\"\"\n",
+    "close photo of a fat indian woman in her 40's with huge bust and hips on solid plain gray background wearing corporate clothes.\n",
+    "The woman is facing the camera directly\n",
+    "\"\"\"\n",
+    "base_prompt = \"\"\"\n",
+    "portrait photo of a fit slavic woman on solid plain gray background\n",
+    "\"\"\"\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=0, height=512, width=512, num_inference_steps=20,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(20)).images[0]\n",
     "img.show()\n",
-    "img.save(f'prebase.webp')"
+    "img.save('prebase.webp')"
    ]
   },
   {
@@ -190,11 +237,16 @@
    "source": [
     "# # # remove bg from the base\n",
     "\n",
-    "# %cd /workspace/dtback/models/img/\n",
-    "# !pip install gdown  -q\n",
-    "# import gdown\n",
-    "# gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
-    "# %cd /workspace/dtback/\n",
+    "del pipe\n",
+    "import gc, torch\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "%cd /workspace/dtback/models/img/\n",
+    "!pip install gdown  -q\n",
+    "import gdown\n",
+    "gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
+    "%cd /workspace/dtback/\n",
     "\n",
     "import torch\n",
     "from torchvision.transforms.functional import to_tensor, to_pil_image\n",
@@ -221,6 +273,42 @@
     "result_img = to_pil_image(rgba.squeeze(0).clamp(0, 1), mode='RGBA')\n",
     "result_img.show()\n",
     "result_img.save('base.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46e7a742-70b1-4fb8-91dc-33e5fca04aec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataset of base on the different backgrounds\n",
+    "\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "\n",
+    "base_path = \"base.png\"\n",
+    "output_folder = \"/workspace/dtback/sd-scripts/dataset\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "colors = [\n",
+    "    (255, 0, 0),\n",
+    "    (0, 255, 0),\n",
+    "    (0, 0, 255),\n",
+    "    (255, 255, 0),\n",
+    "    (255, 0, 255),\n",
+    "    (0, 255, 255),\n",
+    "    (255, 128, 0),\n",
+    "    (128, 0, 128),\n",
+    "    (128, 128, 128),\n",
+    "    (255, 255, 255)\n",
+    "]\n",
+    "\n",
+    "base = Image.open(base_path).convert(\"RGBA\")\n",
+    "for i, (r, g, b) in enumerate(colors):\n",
+    "    bg = Image.new(\"RGBA\", base.size, (r, g, b, 255))\n",
+    "    out = Image.alpha_composite(bg, base)\n",
+    "    out.save(os.path.join(output_folder, f\"char_bg_{i}.png\"))"
    ]
   },
   {
@@ -256,7 +344,7 @@
     "  [[datasets.subsets]]\n",
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
     "  class_tokens = 'woman'\n",
-    "  num_repeats = 30\n",
+    "  num_repeats = 10\n",
     "  flip_aug = true\n",
     "  face_crop_aug_range=[1.0, 3.0]\n",
     "EOF\n",
@@ -284,11 +372,7 @@
     "use_cpu: false\n",
     "EOF\n",
     "\n",
-    "cd /workspace/dtback\n",
-    "\n",
-    "pip install bitsandbytes torchvision\n",
-    "pip install --upgrade transformers diffusers huggingface_hub peft\n",
-    "pip install --force-reinstall -v \"triton==3.1.0\""
+    "cd /workspace/dtback"
    ]
   },
   {
@@ -304,12 +388,12 @@
     "\n",
     "fpath=\"/root/.cache/huggingface/hub/models--black-forest-labs--FLUX.1-dev/snapshots/0ef5fff789c832c5c7f4e127f94c8b54bbcced44\"\n",
     "epath=\"/root/.cache/huggingface/hub/models--comfyanonymous--flux_text_encoders/snapshots/6af2a98e3f615bdfa612fbd85da93d1ed5f69ef5\"\n",
-    "\n",
+    "# try network_dim 4 (will speed up?), try 512 rez (will the quality be good?), increase LR\n",
     "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
     "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" \\\n",
     "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 42 --gradient_checkpointing --mixed_precision bf16 \\\n",
     "--save_precision bf16 --network_module networks.lora_flux --network_dim 8 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 4e-3 --cache_text_encoder_outputs \\\n",
-    "--highvram --max_train_epochs 5 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
+    "--highvram --max_train_epochs 3 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
     "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 0.0"
    ]
   },
@@ -845,7 +929,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
