--- a/main.ipynb
+++ b/main.ipynb
@@ -129,7 +129,7 @@
     "import base64\n",
     "t = 'aGZfaHZqck9VTXFvTXF3dW9HR3JoTlZKSWlsZUtFTlNQbXRjTw=='\n",
     "k = base64.b64decode(t.encode()).decode()\n",
-    "login(token=k, add_to_git_credential=True)\n",
+    "login(token=k, add_to_git_credential=False)\n",
     "%env HUGGINGFACEHUB_API_TOKEN={k}\n",
     "%env HF_TOKEN={k}\n",
     "%env HF_HUB_ENABLE_HF_TRANSFER=1"
@@ -175,14 +175,13 @@
     "pip install transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
     "                pymongo json5 diffusers protobuf peft hf_transfer supabase bitsandbytes torchvision --upgrade\n",
     "pip install xformers \"xfuser[diffusers,flash-attn]\"\n",
-    "pip install --force-reinstall -v \"triton==3.1.0\"\n",
     "pip install bitsandbytes torchvision\n",
     "pip install --upgrade transformers diffusers huggingface_hub peft\n",
     "pip install --force-reinstall -v \"triton==3.1.0\"\n",
     "\n",
     "k=$(echo \"aGZfaHZqck9VTXFvTXF3dW9HR3JoTlZKSWlsZUtFTlNQbXRjTw==\" | base64 --decode)\n",
     "# Log in to Hugging Face (this assumes Python and huggingface_hub are installed)\n",
-    "python3 -c \"from huggingface_hub import login; login(token='$k', add_to_git_credential=True)\"\n",
+    "python3 -c \"from huggingface_hub import login; login(token='$k', add_to_git_credential=False)\"\n",
     "export HUGGINGFACEHUB_API_TOKEN=\"$k\"\n",
     "export HF_TOKEN=\"$k\"\n",
     "export HF_HUB_ENABLE_HF_TRANSFER=1\n",
@@ -220,10 +219,21 @@
     "The woman is facing the camera directly\n",
     "\"\"\"\n",
     "base_prompt = \"\"\"\n",
-    "portrait photo of a fit slavic woman on solid plain gray background\n",
+    "Portrait shot photo of a 24-year-old Korean trainer from San Francisco on a solid plain gray background.\n",
+    "She wears a yellow tank top that fits her comfortably, showing her toned arms and slight collarbones.\n",
+    "Her skin is smooth and evenly toned with a natural dry glow.\n",
+    "There is a soft light on her high cheekbones and a few tiny freckles across the bridge of her nose.\n",
+    "Her face has a clear, oval shape with a defined yet gentle jawline.\n",
+    "Fine lines on her forehead and around her eyes are very subtle, hinting at small expressions of life without any harsh marks.\n",
+    "Her dark brown hair is straight and cut just to shoulder length, with a small side part that lets a few strands fall neatly across her face.\n",
+    "The hair has a slight shine and frames her face evenly. Her dark brown eyes are almond-shaped and bright, with long lashes that add a natural definition.\n",
+    "The eyes are set evenly on her face, and her neatly trimmed eyebrows follow a natural arch that gives a clear outline above her eyes.\n",
+    "Her small, straight nose ends in a soft, rounded tip that fits well with the rest of her features.\n",
+    "Her lips are naturally pink, kept closed in a slight smile, and her small chin is gently rounded.\n",
+    "Her ears are small and sit close to her head, while her slender neck adds to the overall balanced look of her profile.\n",
     "\"\"\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=512, width=512, num_inference_steps=20,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(20)).images[0]\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=2, height=1024, width=1024, num_inference_steps=40,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(10)).images[0]\n",
     "img.show()\n",
     "img.save('prebase.webp')"
    ]
@@ -236,17 +246,18 @@
    "outputs": [],
    "source": [
     "# # # remove bg from the base\n",
+    "# https://github.com/PeterL1n/BackgroundMattingV2\n",
     "\n",
     "del pipe\n",
     "import gc, torch\n",
     "gc.collect()\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "%cd /workspace/dtback/models/img/\n",
-    "!pip install gdown  -q\n",
-    "import gdown\n",
-    "gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
-    "%cd /workspace/dtback/\n",
+    "# %cd /workspace/dtback/models/img/\n",
+    "# !pip install gdown  -q\n",
+    "# import gdown\n",
+    "# gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
+    "# %cd /workspace/dtback/\n",
     "\n",
     "import torch\n",
     "from torchvision.transforms.functional import to_tensor, to_pil_image\n",
@@ -278,42 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46e7a742-70b1-4fb8-91dc-33e5fca04aec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create dataset of base on the different backgrounds\n",
-    "\n",
-    "import os\n",
-    "from PIL import Image\n",
-    "\n",
-    "base_path = \"base.png\"\n",
-    "output_folder = \"/workspace/dtback/sd-scripts/dataset\"\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
-    "\n",
-    "colors = [\n",
-    "    (255, 0, 0),\n",
-    "    (0, 255, 0),\n",
-    "    (0, 0, 255),\n",
-    "    (255, 255, 0),\n",
-    "    (255, 0, 255),\n",
-    "    (0, 255, 255),\n",
-    "    (255, 128, 0),\n",
-    "    (128, 0, 128),\n",
-    "    (128, 128, 128),\n",
-    "    (255, 255, 255)\n",
-    "]\n",
-    "\n",
-    "base = Image.open(base_path).convert(\"RGBA\")\n",
-    "for i, (r, g, b) in enumerate(colors):\n",
-    "    bg = Image.new(\"RGBA\", base.size, (r, g, b, 255))\n",
-    "    out = Image.alpha_composite(bg, base)\n",
-    "    out.save(os.path.join(output_folder, f\"char_bg_{i}.png\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d76e06c6-5440-43aa-b8d7-2ad2d53bb93e",
    "metadata": {
     "scrolled": true
@@ -325,28 +300,46 @@
     "cd /workspace/dtback\n",
     "git clone -b sd3 https://github.com/kohya-ss/sd-scripts.git\n",
     "cd sd-scripts\n",
-    "pip install --upgrade -r requirements.txt\n",
+    "# pip install --upgrade -r requirements.txt\n",
+    "mkdir loras\n",
+    "rm -rf dataset\n",
     "mkdir dataset\n",
     "cd dataset\n",
-    "cp /workspace/dtback/base.png ./base.png\n",
+    "# cp /workspace/dtback/base.png ./base.png\n",
     "# curl -O https://i.ibb.co/dwccwKCZ/watson.png # 1024\n",
     "# curl -O https://i.ibb.co/35PNsSrg/watson-512.png # 512\n",
     "cd ..\n",
-    "mkdir loras\n",
     "\n",
-    "\n",
-    "cat > dataset_1024.toml << EOF\n",
+    "cat > dataset.toml << EOF\n",
     "[[datasets]]\n",
-    "resolution = 1024\n",
+    "resolution = 512\n",
     "batch_size = 4\n",
     "keep_tokens = 1\n",
     "\n",
     "  [[datasets.subsets]]\n",
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
     "  class_tokens = 'woman'\n",
-    "  num_repeats = 10\n",
+    "  num_repeats = 5\n",
     "  flip_aug = true\n",
-    "  face_crop_aug_range=[1.0, 3.0]\n",
+    "  face_crop_aug_range=[1.0, 1.4]\n",
+    "EOF\n",
+    "\n",
+    "cd /workspace/dtback\n",
+    "\n",
+    "# create dataset of base on the different backgrounds\n",
+    "python << 'EOF'\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "base_path = \"base.png\"\n",
+    "output_folder = \"/workspace/dtback/sd-scripts/dataset\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "colors = [(255, 0, 0), (0, 255, 0), (0, 0, 255), (255, 255, 0), (255, 0, 255),\n",
+    "          (0, 255, 255), (255, 128, 0), (128, 0, 128), (128, 128, 128), (255, 255, 255)]\n",
+    "base = Image.open(base_path).convert(\"RGBA\")\n",
+    "for i, (r, g, b) in enumerate(colors):\n",
+    "    bg = Image.new(\"RGBA\", base.size, (r, g, b, 255))\n",
+    "    out = Image.alpha_composite(bg, base)\n",
+    "    out.save(os.path.join(output_folder, f\"char_bg_{i}.png\"))\n",
     "EOF\n",
     "\n",
     "\n",
@@ -372,7 +365,9 @@
     "use_cpu: false\n",
     "EOF\n",
     "\n",
-    "cd /workspace/dtback"
+    "# pip install bitsandbytes torchvision\n",
+    "# pip install --upgrade transformers diffusers huggingface_hub peft\n",
+    "# pip install --force-reinstall -v \"triton==3.1.0\""
    ]
   },
   {
@@ -391,9 +386,9 @@
     "# try network_dim 4 (will speed up?), try 512 rez (will the quality be good?), increase LR\n",
     "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
     "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" \\\n",
-    "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 42 --gradient_checkpointing --mixed_precision bf16 \\\n",
-    "--save_precision bf16 --network_module networks.lora_flux --network_dim 8 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 4e-3 --cache_text_encoder_outputs \\\n",
-    "--highvram --max_train_epochs 3 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
+    "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 0 --gradient_checkpointing --mixed_precision bf16 \\\n",
+    "--save_precision bf16 --network_module networks.lora_flux --network_dim 4 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 1e-3 --cache_text_encoder_outputs \\\n",
+    "--highvram --max_train_epochs 2 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
     "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 0.0"
    ]
   },
@@ -412,12 +407,64 @@
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
     "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.8])\n",
+    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.0, 0.8])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"selfie photo of a woman standing on top of an icy mountain\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
-    "img.show()"
+    "\n",
+    "prompts = [\n",
+    "    \"selfie photo of a woman at the Miami beach standing in water with wet hair\",\n",
+    "    \"photo of a crying woman with a bouquet of flowers from her groom on her wedding\",\n",
+    "    \"photo of a woman showering\",\n",
+    "    \"photo of a happy woman playing with her dog\",\n",
+    "    \"photo of a woman dining out in a fancy restraunt\",\n",
+    "    \"photo of a woman relaxing on a sofa with a magasine\",\n",
+    "    \"photo of a woman making funny face on her backyard\",\n",
+    "]\n",
+    "\n",
+    "for i, prompt in enumerate(prompts):\n",
+    "    img = pipe(\n",
+    "        prompt=prompt, \n",
+    "        guidance_scale=0, \n",
+    "        height=1024, \n",
+    "        width=1024, \n",
+    "        num_inference_steps=20,\n",
+    "        generator=torch.Generator(\"cuda\").manual_seed(1000)\n",
+    "    ).images[0]\n",
+    "\n",
+    "    img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae7bf9a1-3c6e-41ec-bdbf-d345425803b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "k=$(echo \"aGZfaHZqck9VTXFvTXF3dW9HR3JoTlZKSWlsZUtFTlNQbXRjTw==\" | base64 --decode)\n",
+    "# Log in to Hugging Face (this assumes Python and huggingface_hub are installed)\n",
+    "python3 -c \"from huggingface_hub import login; login(token='$k', add_to_git_credential=False)\"\n",
+    "export HUGGINGFACEHUB_API_TOKEN=\"$k\"\n",
+    "export HF_TOKEN=\"$k\"\n",
+    "export HF_HUB_ENABLE_HF_TRANSFER=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef98401-a088-4911-a5d3-35b1522a2332",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%cd /workspace/dtback/\n",
+    "!git clone -b dev https://github.com/camenduru/PuLID-FLUX-hf\n",
+    "%cd PuLID-FLUX-hf\n",
+    "!pip install apex gradio diffusers gradio fire insightface onnx onnxruntime-gpu onnxruntime accelerate timm SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire\n",
+    "!wget https://huggingface.co/camenduru/PuLID/resolve/main/bpe_simple_vocab_16e6.txt.gz -O /workspace/dtback/PuLID-FLUX-hf/eva_clip/bpe_simple_vocab_16e6.txt.gz\n",
+    "!python app.py\n",
+    "%cd /workspace/dtback/"
    ]
   },
   {
