--- a/main.ipynb
+++ b/main.ipynb
@@ -60,9 +60,6 @@
    "execution_count": null,
    "id": "10c60232-c71f-42a4-b876-bae76231a1b2",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -201,9 +198,9 @@
    "source": [
     "# # # generate the base\n",
     "\n",
-    "# %cd /workspace/dtback/models/img/loras/\n",
-    "# !curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
-    "# %cd /workspace/dtback/\n",
+    "%cd /workspace/dtback/models/img/loras/\n",
+    "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
+    "%cd /workspace/dtback/\n",
     "\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
@@ -248,16 +245,19 @@
     "# # # remove bg from the base\n",
     "# https://github.com/PeterL1n/BackgroundMattingV2\n",
     "\n",
-    "del pipe\n",
+    "try:\n",
+    "    del pipe\n",
+    "except NameError:\n",
+    "    pass\n",
     "import gc, torch\n",
     "gc.collect()\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "# %cd /workspace/dtback/models/img/\n",
-    "# !pip install gdown  -q\n",
-    "# import gdown\n",
-    "# gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
-    "# %cd /workspace/dtback/\n",
+    "%cd /workspace/dtback/models/img/\n",
+    "!pip install gdown  -q\n",
+    "import gdown\n",
+    "gdown.download('https://drive.google.com/uc?id=1-t9SO--H4WmP7wUl1tVNNeDkq47hjbv4', 'torchscript_resnet50_fp32.pth', quiet=False)\n",
+    "%cd /workspace/dtback/\n",
     "\n",
     "import torch\n",
     "from torchvision.transforms.functional import to_tensor, to_pil_image\n",
@@ -300,7 +300,7 @@
     "cd /workspace/dtback\n",
     "git clone -b sd3 https://github.com/kohya-ss/sd-scripts.git\n",
     "cd sd-scripts\n",
-    "# pip install --upgrade -r requirements.txt\n",
+    "pip install --upgrade -r requirements.txt\n",
     "mkdir loras\n",
     "rm -rf dataset\n",
     "mkdir dataset\n",
@@ -312,8 +312,8 @@
     "\n",
     "cat > dataset.toml << EOF\n",
     "[[datasets]]\n",
-    "resolution = 512\n",
-    "batch_size = 4\n",
+    "resolution = 1024\n",
+    "batch_size = 8\n",
     "keep_tokens = 1\n",
     "\n",
     "  [[datasets.subsets]]\n",
@@ -365,9 +365,9 @@
     "use_cpu: false\n",
     "EOF\n",
     "\n",
-    "# pip install bitsandbytes torchvision\n",
-    "# pip install --upgrade transformers diffusers huggingface_hub peft\n",
-    "# pip install --force-reinstall -v \"triton==3.1.0\""
+    "pip install bitsandbytes torchvision\n",
+    "pip install --upgrade transformers diffusers huggingface_hub peft\n",
+    "pip install --force-reinstall -v \"triton==3.1.0\""
    ]
   },
   {
@@ -383,13 +383,13 @@
     "\n",
     "fpath=\"/root/.cache/huggingface/hub/models--black-forest-labs--FLUX.1-dev/snapshots/0ef5fff789c832c5c7f4e127f94c8b54bbcced44\"\n",
     "epath=\"/root/.cache/huggingface/hub/models--comfyanonymous--flux_text_encoders/snapshots/6af2a98e3f615bdfa612fbd85da93d1ed5f69ef5\"\n",
-    "# try network_dim 4 (will speed up?), try 512 rez (will the quality be good?), increase LR\n",
-    "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
-    "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" \\\n",
-    "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 0 --gradient_checkpointing --mixed_precision bf16 \\\n",
-    "--save_precision bf16 --network_module networks.lora_flux --network_dim 4 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 1e-3 --cache_text_encoder_outputs \\\n",
-    "--highvram --max_train_epochs 2 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
-    "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 0.0"
+    "\n",
+    "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py --pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" \\\n",
+    "--clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" --cache_latents_to_disk --save_model_as safetensors --sdpa \\\n",
+    "--persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 0 --gradient_checkpointing --mixed_precision bf16 --save_precision bf16 --network_module networks.lora_flux \\\n",
+    "--network_dim 8 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 1e-4 --cache_text_encoder_outputs --highvram --max_train_epochs 4 --save_every_n_epochs 1 \\\n",
+    "--dataset_config sd-scripts/dataset.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw \\\n",
+    "--guidance_scale 0.0"
    ]
   },
   {
@@ -447,6 +447,16 @@
     "export HUGGINGFACEHUB_API_TOKEN=\"$k\"\n",
     "export HF_TOKEN=\"$k\"\n",
     "export HF_HUB_ENABLE_HF_TRANSFER=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b10514be-7595-4956-b094-436c83bcdaed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo \"aGZfaHZqck9VTXFvTXF3dW9HR3JoTlZKSWlsZUtFTlNQbXRjTw==\" | base64 --decode"
    ]
   },
   {
